--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,22 @@ compatibility_date = "2025-10-28"
 
 [assets]
 directory = "./dist"
+binding = "ASSETS"
 
 [triggers]
 routes = ["https://abolition.ing/*"]
+
+[observability]
+enabled = false
+head_sampling_rate = 1
+
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+persist = true
+invocation_logs = true
+
+[observability.traces]
+enabled = false
+persist = true
+head_sampling_rate = 1
