--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.1",
   "scripts": {
     "build:search-index": "node ./src/scripts/generate-search-index.mjs",
-    "predev": "npm run build:search-index",
+    "build:search-client": "node ./scripts/build-search-client.mjs",
+    "predev": "npm run build:search-index && npm run build:search-client",
     "dev": "astro dev",
-    "prebuild": "npm run build:search-index",
+    "prebuild": "npm run build:search-index && npm run build:search-client",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
